# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

### Changed
- Fix string return in convertString

## [1.0.0] - 2021-09-05
### Added
- Ninja Cat
- Astro Cat
- Hipster Cat
- Dino Cat
- Hacker Cat
- Stunt Cat
- Attorney Cat