@@ -4,10 +4,16 @@ Non-standard cat emojis.
 
 ## Getting Started
 
-Meowji can be added to your site by adding:
+Meowji can be added to your site by including `meowji.min.js`:
 
 ```
 <script src="./PATH/TO/meowji.min.js"></script>
+...
+<script>
+  window.onload = () => {
+    meowji.convertNode(document.body);
+  };
+</script>
 ```
 
 ## Development
@@ -21,4 +27,4 @@ yarn build
 
 ## Licensing
 
-Code is licensed under MIT. Cat images are licensed under [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/).
+Code is licensed under MIT. Cat SVGs are licensed under [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/).
