@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Changed
 - Fix string return in convertString
+- Switch Meowji to module
 
 ## [1.0.0] - 2021-09-05
 ### Added
